@@ -17,6 +17,7 @@
 package org.exoplatform.documents.storage.jcr;
 
 import static org.exoplatform.documents.storage.jcr.util.JCRDocumentsUtil.*;
+import static org.gatein.common.net.URLTools.SLASH;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
@@ -542,7 +543,7 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
       }
       if (StringUtils.isNotBlank(folderPath)) {
         try {
-          node = node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8.name()));
+          node = node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8).replace("%", "%25"));
         } catch (RepositoryException repositoryException) {
           throw new ObjectNotFoundException("Folder with path : " + folderPath + " isn't found");
         }
@@ -590,7 +591,7 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
       }
       if(StringUtils.isNotBlank(folderPath)){
         try {
-          node = node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8.name()));
+          node = node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8).replace("%", "%25"));
         } catch (RepositoryException repositoryException) {
           throw new ObjectNotFoundException("Folder with path : " + folderPath + " isn't found");
         }
@@ -666,7 +667,7 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
 
       Node parent = node.getParent();
       String srcPath = node.getPath();
-      String destPath = (parent.getPath().equals("/") ? org.apache.commons.lang.StringUtils.EMPTY : parent.getPath()).concat("/").concat(name);
+      String destPath = (parent.getPath().equals(SLASH) ? org.apache.commons.lang.StringUtils.EMPTY : parent.getPath()).concat(SLASH).concat(name);
       node.getSession().getWorkspace().move(srcPath, destPath);
       node.setProperty(NodeTypeConstants.EXO_TITLE, title);
       node.setProperty(NodeTypeConstants.EXO_NAME, name);
@@ -773,10 +774,10 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
       node.save();
 
       String srcPath = node.getPath();
-      if (session.itemExists(destPath + "/" + node.getName())) {
+      if (session.itemExists(destPath + SLASH + node.getName())) {
         handleMoveDocConflict(session, node, srcPath, destPath, conflictAction);
       } else {
-        node.getSession().getWorkspace().move(srcPath, destPath + "/" + node.getName());
+        node.getSession().getWorkspace().move(srcPath, destPath + SLASH + node.getName());
         node.save();
       }
     } catch (ObjectAlreadyExistsException e) {
@@ -800,10 +801,10 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
     String originName = node.getName();
     String name = originName;
     if (Objects.equals(conflictAction, KEEP_BOTH)) {
-      while (session.itemExists(destPath + "/" + name)) {
+      while (session.itemExists(destPath + SLASH + name)) {
         name = increaseNameIndex(originName, ++count);
       }
-      destPath = destPath + "/" + name;
+      destPath = destPath + SLASH + name;
       node.getSession().getWorkspace().move(srcPath, destPath);
       Node destNode = (Node) session.getItem(destPath);
       if (destNode.hasProperty(NodeTypeConstants.EXO_TITLE)) {
@@ -812,7 +813,7 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
       }
       destNode.getSession().save();
     } else if (Objects.equals(conflictAction, CREATE_NEW_VERSION)) {
-      Node destNode = (Node) session.getItem(destPath + "/" + name);
+      Node destNode = (Node) session.getItem(destPath + SLASH + name);
       Node scrNode = (Node) session.getItem(srcPath);
       if (destNode.isNodeType(NodeTypeConstants.MIX_VERSIONABLE)) {
         Node destContentNode = destNode.getNode(NodeTypeConstants.JCR_CONTENT);
@@ -834,7 +835,7 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
         destNode.getSession().save();
       }
     } else {
-      Node destNode = (Node) session.getItem(destPath + "/" + name);
+      Node destNode = (Node) session.getItem(destPath + SLASH + name);
       Map<String, Boolean> map = new HashMap<>();
       map.put("versionable", destNode.isNodeType(NodeTypeConstants.MIX_VERSIONABLE));
       throw new ObjectAlreadyExistsException(map);
@@ -976,15 +977,15 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
     try {
       if ((node.getName().equals(USER_PRIVATE_ROOT_NODE))) {
         if (folderPath.startsWith(USER_PRIVATE_ROOT_NODE)) {
-          folderPath = folderPath.split(USER_PRIVATE_ROOT_NODE + "/")[1];
-          return (node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8.name())));
+          folderPath = folderPath.split(USER_PRIVATE_ROOT_NODE + SLASH)[1];
+          return (node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8).replace("%", "%25")));
         }
         if (folderPath.startsWith(USER_PUBLIC_ROOT_NODE)) {
           SessionProvider systemSessionProvides = SessionProvider.createSystemProvider();
           Session systemSession = systemSessionProvides.getSession(sessionProvider.getCurrentWorkspace(),
                                                                    sessionProvider.getCurrentRepository());
           Node parent = getNodeByIdentifier(systemSession, ((NodeImpl) node).getIdentifier()).getParent();
-          node = parent.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8.name()));
+          node = parent.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8).replace("%", "%25"));
           Session session = sessionProvider.getSession(sessionProvider.getCurrentWorkspace(),
                                                        sessionProvider.getCurrentRepository());
           if (session.itemExists(node.getPath())) {
@@ -994,20 +995,18 @@ public class JCRDocumentFileStorage implements DocumentFileStorage {
         }
       }
       if ((node.getName().equals(USER_PUBLIC_ROOT_NODE))) {
-        if (folderPath.startsWith(USER_PRIVATE_ROOT_NODE + "/" + USER_PUBLIC_ROOT_NODE)) {
-          folderPath = folderPath.split(USER_PRIVATE_ROOT_NODE + "/" + USER_PUBLIC_ROOT_NODE + "/")[1];
-          return (node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8.name())));
+        if (folderPath.startsWith(USER_PRIVATE_ROOT_NODE + SLASH + USER_PUBLIC_ROOT_NODE)) {
+          folderPath = folderPath.split(USER_PRIVATE_ROOT_NODE + SLASH + USER_PUBLIC_ROOT_NODE + SLASH)[1];
+          return (node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8).replace("%", "%25")));
         }
         if (folderPath.startsWith(USER_PUBLIC_ROOT_NODE)) {
-          folderPath = folderPath.split(USER_PUBLIC_ROOT_NODE + "/")[1];
-          return (node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8.name())));
+          folderPath = folderPath.split(USER_PUBLIC_ROOT_NODE + SLASH)[1];
+          return (node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8).replace("%", "%25")));
         }
       }
-      return (node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8.name())));
+      return (node.getNode(java.net.URLDecoder.decode(folderPath, StandardCharsets.UTF_8).replace("%", "%25")));
     } catch (RepositoryException repositoryException) {
       throw new ObjectNotFoundException("Folder with path : " + folderPath + " isn't found");
-    } catch (UnsupportedEncodingException e) {
-      throw new IllegalStateException("Error retrieving folder'" + folderPath, e);
     }
   }
 
